--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -29,6 +29,7 @@ body {
     font-size: 28px;
     padding-top: 0px;
     font-family: Tahoma cursive;
+    margin-top: -34px;
     text-align: left;
     line-height: .5;
 }
