--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,13 +8,13 @@ body {
     margin: 60px 0px 100px 0px;
     font-family: Tahoma;
     width: 800px;
-    height: 400px;
+    height: 140px;
     font-size: 18px;
     font-weight: 200;
     line-height: 30px;
     background-color: #eee;
-    border-radius: 6px;
-    padding: 10px 0px 40px 0px;
+    border-radius: 3px;
+    padding:6px 0px 12px 0px;
 }
 
 .robyn h1 {
@@ -23,6 +23,7 @@ body {
     padding-bottom: 0px;    
     line-height: 1;
     letter-spacing: -1px;
+    color: #D80000;
 }
 
 .robyn h2 {
@@ -34,9 +35,58 @@ body {
     line-height: .5;
 }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.blog_entry {
+    margin: 20px 0px 100px 0px;
+    font-family: Tahoma;
+    width: 800px;
+    height: 950px;
+    font-size: 18px;
+    font-weight: 200;
+    background-color: #eee;
+    padding: 5px 0px 10px 0px;
 }
+
+.blog_entry h1{
+    line-height:30px;
+    color: #D80000;
+    font-size: 28px;
+}
+
+.blog_entry p {
+    font-size: 14px;
+}
+
+.blog_entry a {
+    text-decoration: none;
+    color: #D80000;
+    font-size: 14px;
+    font-family: Helvetica;
+}
+
+.blog_entry a:hover {
+    text-decoration:underline;
+}
+
+.blog_entry ul {
+    font-size: 14px;
+    text-align: left;
+    margin-top: -10px;
+    margin-bottom: -10px;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+
+.blog_entry li {
+    margin-left: 20px;
+}
+
+.blog_entry h3 {
+    font-family: script;
+    font-size: 18px;
+}
+
+.top a {
+    margin-left: 760px;
+}
+
+
