--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,10 +5,10 @@ body {
 }
 
 .robyn {
-    margin: 60px 0px 100px 0px;
+    margin: 30px 0px 68px 0px;
     font-family: Tahoma;
     width: 800px;
-    height: 140px;
+    height: auto;
     font-size: 18px;
     font-weight: 200;
     line-height: 30px;
@@ -36,10 +36,10 @@ body {
 }
 
 .blog_entry {
-    margin: 20px 0px 100px 0px;
+    margin: 20px 0px 46px 0px;
     font-family: Tahoma;
     width: 800px;
-    height: 950px;
+    height: auto;
     font-size: 18px;
     font-weight: 200;
     background-color: #eee;
@@ -85,8 +85,50 @@ body {
     font-size: 18px;
 }
 
+.blog_entry img {
+    border: 3px solid;
+    border-radius: 36px;
+    border-color: black;
+    margin-left: 140px;
+    height: 400px;
+    width: auto;
+}
+
 .top a {
     margin-left: 760px;
 }
 
+.comments {
+    margin: 20px 0px 100px 0px;
+    font-family: Tahoma;
+    width: 800px;
+    height: auto;
+    font-size: 18px;
+    font-weight: 200;
+    background-color: #eee;
+    padding: 5px 0px 10px 0px;
+}
 
+.comments label {
+    font-size: 14px;
+    font-family: Tahoma;
+}
+
+.contact p {
+    max-width: 800px;
+    font-size: 10px;
+    line-height: 10px;
+    margin-top: -50px;
+    text-align: right;
+}
+
+.contact a {
+    text-decoration: none;
+    color: black;
+    font-size: 10px;
+    font-family: Helvetica;
+}
+
+.contact a:hover {
+    text-decoration:underline;
+}
